kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-kaiif
  namespace: kube-public
  labels:
    app: nginx-kaiif
spec:
  type: NodePort
  selector:
    app: nginx-kaiif 
  ports:
  - port: 80
    targetPort: 80
